--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -17,7 +17,7 @@
 
   &__body {
     background-color: white;
-    border-radius: $border-radius;
+    border-radius: $border-radius-md;
     z-index: $layer3;
     height: 400px;
     width: 400px;
