--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,5 +6,14 @@ $backdrop: rgba(0, 0, 0, 0.5);
 $layer1: 1;
 $layer2: 2;
 $layer3: 3;
-$border-radius: 5px;
+
+$border-radius-sm: 2px;
+$border-radius-md: 5px;
+
 $transition-ease: 500ms;
+
+$spacing-base: 6px;
+$spacing-md: $spacing-base * 2;
+$spacing-l: $spacing-base * 3;
+
+$border-thin: 1px solid #ccc;
